--- a/elearning-frontend/src/index.css
+++ b/elearning-frontend/src/index.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #52616B;
+  background-color: #706e6e;
+  background-image: radial-gradient(circle, #ded9d9 1px, transparent 1px);
+  background-size: 20px 20px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
